code changes for app property

--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -24,9 +24,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+                
+              },
+               "src/data"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
