--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
@@ -18,6 +18,7 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
+    "typeRoots": ["src/alertyfytype.d.ts"],
     "module": "ES2022",
     "lib": [
       "ES2022",
@@ -28,6 +29,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictNullChecks": false,
   }
 }
